feat: Add Footer and improve cards UI

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jowagi Agency",
+  "name": "Landscaping, Tree Planting, Interior Design Company",
   "icons": [
     {
       "src": "favicon.ico",
